--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1485,6 +1485,73 @@
                   <p class="sign--person">作成者:</p>
                   <a href="about.html" target="_blank">@マルティナ</a>
                 </div>
+                <button class="lesson lesson--polish-idioms">10 Polish idioms (bonus)</button>
+        <div class="panel">
+          <h2>10 Polish idioms (bonus)</h2>
+          <p>こちらのレッスンでは、皆さんにポーランド語の熟語(フレーズ)をお教えしていきます♪
+            <br> <br>
+            熟語は通常、特定の意味を持つ単語を組み合わせたものとして定義されますが、それぞれの単語の意味だけを考えると、あまり意味をもたなかったり、比喩的な表現とは違うものになります。
+            <br><br>
+            ではさっそく、１０個の熟語をご紹介します。： <br><br>
+            ● <span lang="pl">Udawać Greka</span>  (直訳：ギリシャ人にふりをする)－何も気付いていなかったり、理解していないようなふりをすること
+            <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Nie udawaj Greka, wiem że wziąłeś moje pieniądze.</span> <br>
+            知らないふりをしないで、あなたが私のお金を取ったのは分かっています。 <br> <br>
+            ● <span lang="pl">Złota rączka</span> (直訳：金の手)－修理(主に家の中のものなど)が必要になった際に直せる人。便利屋のような人。
+            <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Mój tata to prawdziwa złota rączka, sąsiedzi proszą go o pomoc w naprawie ich pralek.</span>
+            <br>
+            私の父はまさに便利屋のようです。近所の人たちは、食洗器が故障したときにいつも父に助けを求めてきます。
+            <br> <br>
+            ● <span lang="pl">Bułka z masłem </span>
+            (直訳：ロールパンとバター)－とても簡単な事；楽勝な <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">ポーランド語を勉強することは、私にとっては簡単なことです。 <br> <br>
+            ● <span lang="pl">Flaki z olejem </span>(直訳：油の胃)－とても退屈な事
+           <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Ta lekcja jest nudna jak flaki z olejem.</span> <br>
+            この授業は非常に退屈だ。
+            <br> <br>
+            ● <span lang="pl">Nie kiwnąć palcem</span>  (直訳：～の指に立ち向かわないこと)－何もしないこと(助けないこと) <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">On jest moim najlepszym przyjacielem, ale nawet nie kiwnął palcem by mi pomóc w
+              przeprowadzce.</span> <br>
+              彼は親友だが、モノを動かすことを一切手伝おうとしない。<br><br>
+            ● <span lang="pl">Kopnąć w kalendarz</span> (直訳：カレンダーを蹴る)－亡くなること(※あまり丁寧な言い方ではないので、お葬式などの場でこの言葉を使うことはおススメしません。英語でいう“kick the bucket”と同じ表現です。)
+            (直訳：カレンダーを蹴る)－亡くなること(※あまり丁寧な言い方ではないので、お葬式などの場でこの言葉を使うことはおススメしません。英語でいう“kick the bucket”と同じ表現です。)
+            <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Mój ojciec kopnął w kalendarz rok temu.</span> <br>
+            私の父は一年前に亡くなった。 <br><br>
+            ● <span lang="pl">Niebo w gębie</span> (直訳：～の舌が天国のような)－とても美味しい
+            <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Pierogi z kapustą to niebo w gębie.</span> <br>
+            キャベツの入ったピエロギはとても美味しいです。 <br><br>
+            ● <span lang="pl">Upaść na głowę</span>(直訳：～の頭を襲う)－おかしくなる事／頭にくること<br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Jeśli myślisz, że Ci pomogę to upadłeś na głowę.</span> <br>
+            私があなたを助けると思うのなら、あなたはおかしいです。 <br><br>
+            ● <span lang="pl">Być nie w sosie</span>   (直訳：ソースの中に入らない事)－怒ること、機嫌が悪くなること
+        <br>
+            <span class="example">例文：</span> <br>
+            <span lang="pl">Co ty taki jesteś nie w sosie dzisiaj?</span> <br>
+            何だか機嫌が悪いみたいだけど、一体今日はどうしたの？ <br> <br>
+            ● <span lang="pl">Rzucać grochem o ścianę</span>(直訳：壁に豆をなげる)－誰かにとって全く影響力のないことを言うこと
+            <br>
+            <span class="example">例文：</span> <br>
+            Próbowałam ją przekonać, że powinna częściej odpoczywać, ale to jak rzucanie grochem o ścianę.</span> <br>
+            彼女に休むようにと説得したが、全く意味がなかった。 <br> <br> <br>
+
+            以上で熟語・フレーズのレッスンは終了です。皆さんがこのレッスンで学んだフレーズを気に入ってくれたら嬉しいです♪ポーランド語のフレーズは他にもたくさんあるので、ぜひご自身でも調べてみてください(^^)
+          </p>
+          <div class="sign">
+            <p class="sign--person">written by</p>
+            <a href="about.html" target="_blank">@Martyna</a>
+          </div>
           </div>
         </div>
         <div class="reportButton">
