--- a/jp/stuff/traditions.html
+++ b/jp/stuff/traditions.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description"
@@ -60,6 +61,43 @@
             <div class="wrapper">
                 <h1>Traditions</h1>
                 <article>
+                    <div class="content content--trad">
+                        <h2>独立記念日</h2>
+                        <p class="data"> 2020年11月11日 | author: <a href="../about.html" target="_blank"
+                                class="author">@アンナ</a></p><br>
+                        <div class="container__trad container__trad--item">
+                            <div class="container__trad">
+                                <img src="./../../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci3.jpg"
+                                    alt="Celebrations of Independence Day" class="image-right__center">
+                                <img src="./../../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci2.jpg"
+                                    alt="Celebrations of Independence Day" class="image-left__center">
+                                <p>独立記念日（ポーランド語: Narodowe Święto
+                                    Niepodległości）は毎年11月11日に祝われるポーランド共和国の祝日。123年にわたり分割占領
+                                    下にあったポーランドが1918年に独立を回復したことを記念する日として法律で国民の祝日に定められた。
+                                    <span class="dots">(...)</span>
+                                </p>
+                                <div class="more">
+                                    <img src="./../../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci1.jpg"
+                                        alt="Celebrations of Independence Day" class="image-right__center">
+                                    <p> ポーランドの国家としての独立回復は11月11日の一日で急激になされたものではなく
+                                        段階的に行われていった。この日付が選ばれたのは、第一次世界大戦に事実上の終止符を打つドイツ
+                                        ・連合国間の休戦協定が締結されドイツの敗北が決定的となったのが1918年11月11日であったため。
+                                        前日の10日にワルシャワに戻っていたユゼフ・ピウスツキは11日ポーランド軍総司令官に任命され、
+                                        この11月10、11日の両日を通して、ポーランド国民は独立を完全に回復したことを認識するに至った。
+                                        1937年にこの日を独立記念日とすることが法律で定められたが、1939年以降のナチス・ドイツによる支配時代、
+                                        1945年以降の共産政権下においてこの記念日を祝うことは許されず、ようやく1989年に再び11月11日を
+                                        独立記念日として国民の祝日にすることが議会により決議された。
+                                    </p>
+                                    <div class="source">
+                                        <i>Source: </i> <a
+                                            href="https://en.wikipedia.org/wiki/National_Independence_Day_(Poland)"
+                                            target="_blank">ウィキペディア</a>
+                                    </div>
+                                </div>
+                                <button onclick="myFunction()" class="button__default">Read more</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="content content--trad">
                         <h2>諸聖人の祝日と祖霊祭(Dziady)－ポーランドの死者慰霊祭ー</h2>
                         <p class="data"> 2020年10月24日 | 作成者: <a href="../about.html" target="_blank"
@@ -125,96 +163,97 @@
                             </div>
                         </div>
                     </div>
-                <h1>文化</h1>
-                <article>
-                    <div class="content">
-                        <h2>ワルシャワ蜂起</h2>
-                        <p class="data"> 2020年08月01日 | 作成者: <a href="../about.html" target="_blank"
-                                class="author">@ロバート</a></p>
-                        <img src="././../../assets/img/articles/traditions/01.08.2020/powstanieWarszawskie.jpg"
-                            alt="Warsaw Uprising" class="image-left__center">
-                        <img src="././../../assets/img/articles/traditions/01.08.2020//powstanieWarszawskie2.jpg"
-                            alt="People during Warsaw Uprising" class="image-right__center">
-                        <p>ポーランドでは、毎年17:00（ポーランドのタイムゾーンの午後5時）にワルシャワ蜂起を記念してサイレンが鳴り、全員が立ち止まります。道路にいようと道端にいようと関係なく、蜂起で亡くなった兵士に敬意を表するために、1分間黙とうをします。
-                            <br>
-                            これは、ポーランドの美しいイベントの1つです。
-                            この文化は永遠に続きます。ワルシャワ蜂起（ワルシャワほうき、ポーランド語：Powstanie
-                            Warszawskie）は、第二次世界大戦後期、ナチス・ドイツ占領下のポーランドの首都ワルシャワで起こった武装蜂起である。<span class="dots">(...)</span>
-                        </p>
-                        <div class="more">
-                            <p>
-                                <img src="././../../assets/img/articles/traditions/01.08.2020//powstanieWarszawskie3.jpg"
-                                    alt="Warsaw Uprising" class="image-right__center">
+                    <h1>文化</h1>
+                    <article>
+                        <div class="content">
+                            <h2>ワルシャワ蜂起</h2>
+                            <p class="data"> 2020年08月01日 | 作成者: <a href="../about.html" target="_blank"
+                                    class="author">@ロバート</a></p>
+                            <img src="././../../assets/img/articles/traditions/01.08.2020/powstanieWarszawskie.jpg"
+                                alt="Warsaw Uprising" class="image-left__center">
+                            <img src="././../../assets/img/articles/traditions/01.08.2020//powstanieWarszawskie2.jpg"
+                                alt="People during Warsaw Uprising" class="image-right__center">
+                            <p>ポーランドでは、毎年17:00（ポーランドのタイムゾーンの午後5時）にワルシャワ蜂起を記念してサイレンが鳴り、全員が立ち止まります。道路にいようと道端にいようと関係なく、蜂起で亡くなった兵士に敬意を表するために、1分間黙とうをします。
                                 <br>
-                                <b>【蜂起】</b>
-                                <br>
-                                1944年6月22日から開始されたソ連の赤軍によるバグラチオン作戦の成功によりドイツ軍の中央軍集団は壊滅、敗走を重ねた。ドイツ軍は東部占領地域に再編成・治安維持のために駐屯する部隊をかき集めて戦線の穴を埋めて防戦に努めた。
-                                赤軍占領地域がポーランド東部一帯にまで及ぶと、ソ連はポーランドのレジスタンスに蜂起を呼びかけた。7月30日には赤軍はワルシャワから10kmの地点まで進出。占領も時間の問題と思われた。ポーランド国内軍はそれに呼応するような形で、8月1日、ドイツ軍兵力が希薄になったワルシャワで武装蜂起することを赤軍と打ち合わせた。
-                                7月31日、ドイツ軍が猛反撃を行い赤軍は甚大な損害を被る。さらに赤軍は補給に行き詰まり、進軍を停止した。<br>
-                                ポーランド国内軍には赤軍の進撃停止の情報は伝えられなかったうえに、その直前の7月29日には、モスクワ放送から蜂起開始を呼びかけるラジオ放送が流れ続けており、赤軍の位置からそのワルシャワ到着は大きくは遅れないと判断された。
-                                8月1日17時ちょうど、約5万人の国内軍は蜂起を開始。兵士達は橋、官庁、駅、ドイツ軍の兵舎、補給所を襲撃する。<br>
-                                <br>
-                                この時刻は「W」と呼ばれ、現在でも毎年8月1日の同時刻にワルシャワではサイレンが鳴り渡り、市民がその場で動きを止め、各自で1分間の黙祷を捧げるのが恒例行事となっている。<br>
-                                <br>
-                                <b>【ドイツ軍の対応】</b>
-                                <br>
-                                ワルシャワ市内には治安部隊を中心に約12,000名のドイツ兵が駐屯していた。その内、戦闘部隊と呼べるのはオストプロイセン擲弾兵連隊の約1,000名だけであった。<br>
-                                ドイツ軍治安部隊は数で劣っていたものの国内軍を圧倒する豊富な物量装備をもって臨んだ。その兵員の大半が火器を持たない国内軍では目標地点のほとんどを占領できず、わずかにドイツ軍の兵舎、<br>
-                                補給所を占領しただけであった。即日報告を受けたアドルフ・ヒトラーは、これをみて、赤軍が国内軍を支援する気が全くないと判断し、蜂起した国内軍の弾圧とワルシャワの徹底した破壊を命ずる。<br>
-                                <br>
-                                国内軍は引き続き、目標地点に攻撃を仕掛けるが成果は上がらず、警察署や電話局では取り残されたドイツ軍部隊が徹底抗戦を行っていた。しかし、ドイツ軍の補給所、<br>
-                                兵舎の占領により、当初数人に一人しか銃が無いという状態を脱し、奪ったドイツ軍の小火器、軍服が国内軍兵士に支給され、装備面で多少の改善が見られた。これにより、敵味方が同じ軍服を着用するため<br>、
-                                国内軍兵士はポーランド国旗を模した腕章やワッペンを着用し、識別を行った。さらに多くの市民が国内軍に参加、協力をして、ドイツ軍の反撃に備えバリケードを築いた。<br>
-                                <br>
-                                鎮圧軍司令官に任ぜられたエーリヒ・フォン・デム・バッハSS大将は8月3日には現地に入り、周辺の部隊をかき集め、5日には反撃に出る。急遽近隣に駐屯していた部隊をかき集めたドイツ軍は殆どが大隊規模の部隊だけで、臨時に戦闘団に編成し、市街地西側から攻撃を開始する。しかし、国内軍を中心として士気が高くよく統率のとれたレジスタンスの猛烈な防戦に会い、進撃は遅々として進まなかった。攻撃部隊にはカミンスキー旅団やSS特別連隊「ディルレヴァンガー」といった素行の悪さで有名な部隊が加わっており、これらの部隊の兵士たちは戦闘より略奪や暴行、虐殺に励んだ。このことはワルシャワ市民と国内軍の結束をより一層強め、戦意を高揚させた。
-                                <br>
-                                7日には市街地を何とか横断し、国内軍占領地を分断し、包囲されていた部隊を解放した。しかし、市街地に立て籠もる国内軍の抵抗は続き、激しい市街戦が続く。<br>
-                                国内軍も8月19日に総反撃に出て、電話局を占領し、120名のドイツ兵が捕虜になった。ディルレヴァンガー連隊、カミンスキー旅団の残虐行為への報復として、<br>
-                                捕虜のうち武装親衛隊兵士や外国人義勇兵は全員その場で処刑された。<br>
-                                <br>
-                                <b>【赤軍の対応】</b>
-                                <br>
-                                ヴィスワ川対岸のプラガ地区の占領に成功した赤軍は、市街地への渡河が容易な状況にあったにもかかわらず、<br>
-                                国内軍への支援をせずに静観した。赤軍と共に東方からポーランドへ進軍しプラガ地区に到着していたズィグムント・ベルリンク将軍の率いる第1ポーランド軍（英語版）のみが対岸の国内軍支援のための渡河を許され、<br>
-                                彼らポーランド人部隊はベルリンク将軍以下必死でレジスタンスへの支援をしたものの、その輸送力は充分ではなかった。赤軍は輸送力に余裕があったにもかかわらず第1ポーランド軍に力を貸さなかった。<br>
-                                のちにポーランド人民共和国最後の国家指導者で1989年の新生ポーランド共和国初代大統領となったヴォイチェフ・ヤルゼルスキはこの時、第1ポーランド軍の青年将校として現地におり、物資補給作戦に参加している。<br>
-                                彼はこのときの燃え盛るワルシャワ市街を眺めながら、蜂起を傍観した赤軍に対して涙ながらに感じた悔しさをのちに自伝『ポーランドを生きる』のなかで赤裸々に吐露している。<br>
-                                <br>
-                                ソ連はイギリスやアメリカの航空機に対する飛行場での再補給や、西側連合国による国内軍の航空支援に対し同意せず、質・量に勝るドイツ軍に対して劣勢に回り、蜂起は失敗に向かっていく。<br>
-                                <br>
-                                <b>【終焉】</b>
-                                <br>
-                                ドイツ軍は重火器、戦車、火炎放射器など圧倒的な火力の差で徐々に国内軍を追いつめていった。<br>
-                                その一方で目に余るカミンスキー旅団の残虐行為に対しハインリヒ・ヒムラーは、8月27日に司令部に対しカミンスキーの処刑を許可した。<br>
-                                カミンスキーは故意に呼び出されたところを殺害され、ワルシャワから撤退したカミンスキー旅団は解散させられた。8月31日には、国内軍は分断された北側の解放区を放棄し、<br>
-                                地下水道を使って南側の解放区に脱出する。9月末には国内軍はほぼ潰滅する。<br>
-                                <br>
-                                <b>【ワルシャワの破壊】</b>
-                                その後、ドイツ軍による懲罰的攻撃によりワルシャワは徹底した破壊にさらされ、<br>
-                                蜂起参加者はテロリストとされ、レジスタンス・市民を合わせて約22万人が戦死･処刑で死亡したと言われる。<br>
-                                しかし、イギリス政府がワルシャワのレジスタンスを処刑した者は戦犯とみなすとラジオを通して警告したため、レジスタンスへの処刑は止んだ。<br>
-                                10月2日、国内軍はドイツ軍に降伏し、蜂起は完全に鎮圧された。翌日、ワルシャワ工科大学に国内軍は行進し、降伏式典の後、武装解除された。<br>
-                                降伏した国内軍は、捕虜として収容所に送られた。しかし、武装解除に応ぜず、地下に潜伏して抵抗を続ける者も多かった。<br>
-                                <br>
-                                市民の死亡者数は18万人から25万人の間であると推定され、鎮圧後約70万人の住民は町から追放された。<br>
-                                また、蜂起に巻き込まれた約200名のドイツ人民間人が国内軍に処刑されたと言われている。国内軍は1万6000人、ドイツ軍は2000名の戦死者を出した。<br>
-                                <br>
-                                一連の戦闘により、ワルシャワの市街地はほぼ完全に破壊され、歴史的建造物や文書などの文化遺産の多くが失われた。ワルシャワの再建には長い年月を要することとなる。</p>
+                                これは、ポーランドの美しいイベントの1つです。
+                                この文化は永遠に続きます。ワルシャワ蜂起（ワルシャワほうき、ポーランド語：Powstanie
+                                Warszawskie）は、第二次世界大戦後期、ナチス・ドイツ占領下のポーランドの首都ワルシャワで起こった武装蜂起である。<span
+                                    class="dots">(...)</span>
+                            </p>
+                            <div class="more">
+                                <p>
+                                    <img src="././../../assets/img/articles/traditions/01.08.2020//powstanieWarszawskie3.jpg"
+                                        alt="Warsaw Uprising" class="image-right__center">
+                                    <br>
+                                    <b>【蜂起】</b>
+                                    <br>
+                                    1944年6月22日から開始されたソ連の赤軍によるバグラチオン作戦の成功によりドイツ軍の中央軍集団は壊滅、敗走を重ねた。ドイツ軍は東部占領地域に再編成・治安維持のために駐屯する部隊をかき集めて戦線の穴を埋めて防戦に努めた。
+                                    赤軍占領地域がポーランド東部一帯にまで及ぶと、ソ連はポーランドのレジスタンスに蜂起を呼びかけた。7月30日には赤軍はワルシャワから10kmの地点まで進出。占領も時間の問題と思われた。ポーランド国内軍はそれに呼応するような形で、8月1日、ドイツ軍兵力が希薄になったワルシャワで武装蜂起することを赤軍と打ち合わせた。
+                                    7月31日、ドイツ軍が猛反撃を行い赤軍は甚大な損害を被る。さらに赤軍は補給に行き詰まり、進軍を停止した。<br>
+                                    ポーランド国内軍には赤軍の進撃停止の情報は伝えられなかったうえに、その直前の7月29日には、モスクワ放送から蜂起開始を呼びかけるラジオ放送が流れ続けており、赤軍の位置からそのワルシャワ到着は大きくは遅れないと判断された。
+                                    8月1日17時ちょうど、約5万人の国内軍は蜂起を開始。兵士達は橋、官庁、駅、ドイツ軍の兵舎、補給所を襲撃する。<br>
+                                    <br>
+                                    この時刻は「W」と呼ばれ、現在でも毎年8月1日の同時刻にワルシャワではサイレンが鳴り渡り、市民がその場で動きを止め、各自で1分間の黙祷を捧げるのが恒例行事となっている。<br>
+                                    <br>
+                                    <b>【ドイツ軍の対応】</b>
+                                    <br>
+                                    ワルシャワ市内には治安部隊を中心に約12,000名のドイツ兵が駐屯していた。その内、戦闘部隊と呼べるのはオストプロイセン擲弾兵連隊の約1,000名だけであった。<br>
+                                    ドイツ軍治安部隊は数で劣っていたものの国内軍を圧倒する豊富な物量装備をもって臨んだ。その兵員の大半が火器を持たない国内軍では目標地点のほとんどを占領できず、わずかにドイツ軍の兵舎、<br>
+                                    補給所を占領しただけであった。即日報告を受けたアドルフ・ヒトラーは、これをみて、赤軍が国内軍を支援する気が全くないと判断し、蜂起した国内軍の弾圧とワルシャワの徹底した破壊を命ずる。<br>
+                                    <br>
+                                    国内軍は引き続き、目標地点に攻撃を仕掛けるが成果は上がらず、警察署や電話局では取り残されたドイツ軍部隊が徹底抗戦を行っていた。しかし、ドイツ軍の補給所、<br>
+                                    兵舎の占領により、当初数人に一人しか銃が無いという状態を脱し、奪ったドイツ軍の小火器、軍服が国内軍兵士に支給され、装備面で多少の改善が見られた。これにより、敵味方が同じ軍服を着用するため<br>、
+                                    国内軍兵士はポーランド国旗を模した腕章やワッペンを着用し、識別を行った。さらに多くの市民が国内軍に参加、協力をして、ドイツ軍の反撃に備えバリケードを築いた。<br>
+                                    <br>
+                                    鎮圧軍司令官に任ぜられたエーリヒ・フォン・デム・バッハSS大将は8月3日には現地に入り、周辺の部隊をかき集め、5日には反撃に出る。急遽近隣に駐屯していた部隊をかき集めたドイツ軍は殆どが大隊規模の部隊だけで、臨時に戦闘団に編成し、市街地西側から攻撃を開始する。しかし、国内軍を中心として士気が高くよく統率のとれたレジスタンスの猛烈な防戦に会い、進撃は遅々として進まなかった。攻撃部隊にはカミンスキー旅団やSS特別連隊「ディルレヴァンガー」といった素行の悪さで有名な部隊が加わっており、これらの部隊の兵士たちは戦闘より略奪や暴行、虐殺に励んだ。このことはワルシャワ市民と国内軍の結束をより一層強め、戦意を高揚させた。
+                                    <br>
+                                    7日には市街地を何とか横断し、国内軍占領地を分断し、包囲されていた部隊を解放した。しかし、市街地に立て籠もる国内軍の抵抗は続き、激しい市街戦が続く。<br>
+                                    国内軍も8月19日に総反撃に出て、電話局を占領し、120名のドイツ兵が捕虜になった。ディルレヴァンガー連隊、カミンスキー旅団の残虐行為への報復として、<br>
+                                    捕虜のうち武装親衛隊兵士や外国人義勇兵は全員その場で処刑された。<br>
+                                    <br>
+                                    <b>【赤軍の対応】</b>
+                                    <br>
+                                    ヴィスワ川対岸のプラガ地区の占領に成功した赤軍は、市街地への渡河が容易な状況にあったにもかかわらず、<br>
+                                    国内軍への支援をせずに静観した。赤軍と共に東方からポーランドへ進軍しプラガ地区に到着していたズィグムント・ベルリンク将軍の率いる第1ポーランド軍（英語版）のみが対岸の国内軍支援のための渡河を許され、<br>
+                                    彼らポーランド人部隊はベルリンク将軍以下必死でレジスタンスへの支援をしたものの、その輸送力は充分ではなかった。赤軍は輸送力に余裕があったにもかかわらず第1ポーランド軍に力を貸さなかった。<br>
+                                    のちにポーランド人民共和国最後の国家指導者で1989年の新生ポーランド共和国初代大統領となったヴォイチェフ・ヤルゼルスキはこの時、第1ポーランド軍の青年将校として現地におり、物資補給作戦に参加している。<br>
+                                    彼はこのときの燃え盛るワルシャワ市街を眺めながら、蜂起を傍観した赤軍に対して涙ながらに感じた悔しさをのちに自伝『ポーランドを生きる』のなかで赤裸々に吐露している。<br>
+                                    <br>
+                                    ソ連はイギリスやアメリカの航空機に対する飛行場での再補給や、西側連合国による国内軍の航空支援に対し同意せず、質・量に勝るドイツ軍に対して劣勢に回り、蜂起は失敗に向かっていく。<br>
+                                    <br>
+                                    <b>【終焉】</b>
+                                    <br>
+                                    ドイツ軍は重火器、戦車、火炎放射器など圧倒的な火力の差で徐々に国内軍を追いつめていった。<br>
+                                    その一方で目に余るカミンスキー旅団の残虐行為に対しハインリヒ・ヒムラーは、8月27日に司令部に対しカミンスキーの処刑を許可した。<br>
+                                    カミンスキーは故意に呼び出されたところを殺害され、ワルシャワから撤退したカミンスキー旅団は解散させられた。8月31日には、国内軍は分断された北側の解放区を放棄し、<br>
+                                    地下水道を使って南側の解放区に脱出する。9月末には国内軍はほぼ潰滅する。<br>
+                                    <br>
+                                    <b>【ワルシャワの破壊】</b>
+                                    その後、ドイツ軍による懲罰的攻撃によりワルシャワは徹底した破壊にさらされ、<br>
+                                    蜂起参加者はテロリストとされ、レジスタンス・市民を合わせて約22万人が戦死･処刑で死亡したと言われる。<br>
+                                    しかし、イギリス政府がワルシャワのレジスタンスを処刑した者は戦犯とみなすとラジオを通して警告したため、レジスタンスへの処刑は止んだ。<br>
+                                    10月2日、国内軍はドイツ軍に降伏し、蜂起は完全に鎮圧された。翌日、ワルシャワ工科大学に国内軍は行進し、降伏式典の後、武装解除された。<br>
+                                    降伏した国内軍は、捕虜として収容所に送られた。しかし、武装解除に応ぜず、地下に潜伏して抵抗を続ける者も多かった。<br>
+                                    <br>
+                                    市民の死亡者数は18万人から25万人の間であると推定され、鎮圧後約70万人の住民は町から追放された。<br>
+                                    また、蜂起に巻き込まれた約200名のドイツ人民間人が国内軍に処刑されたと言われている。国内軍は1万6000人、ドイツ軍は2000名の戦死者を出した。<br>
+                                    <br>
+                                    一連の戦闘により、ワルシャワの市街地はほぼ完全に破壊され、歴史的建造物や文書などの文化遺産の多くが失われた。ワルシャワの再建には長い年月を要することとなる。</p>
 
-                            <div class="source">
-                                <i>引用 <a href="https://en.wikipedia.org/wiki/Warsaw_Uprising"
-                                        target="_blank">ウィキペディア</a></i>
-                                <i>写真引用 <a
-                                        href="https://warszawa.wyborcza.pl/warszawa/51,147245,20462091.html?i=5&disableRedirects=true"
-                                        target="_blank">wyborcza.pl</a></i>
+                                <div class="source">
+                                    <i>引用 <a href="https://en.wikipedia.org/wiki/Warsaw_Uprising"
+                                            target="_blank">ウィキペディア</a></i>
+                                    <i>写真引用 <a
+                                            href="https://warszawa.wyborcza.pl/warszawa/51,147245,20462091.html?i=5&disableRedirects=true"
+                                            target="_blank">wyborcza.pl</a></i>
+                                </div>
                             </div>
+                            <button class="button__default">さらに読む</button>
                         </div>
-                        <button class="button__default">さらに読む</button>
-                    </div>
-                    <div class="reportButton">
-                        <button class="report" onclick="report()">レポート</button>
-                    </div>
-                </article>
+                        <div class="reportButton">
+                            <button class="report" onclick="report()">レポート</button>
+                        </div>
+                    </article>
             </div>
         </section>
         <script src="./../../assets/js/readMore.js"></script>
