--- a/jp/stuff/traditions.html
+++ b/jp/stuff/traditions.html
@@ -88,6 +88,13 @@
                                         1945年以降の共産政権下においてこの記念日を祝うことは許されず、ようやく1989年に再び11月11日を
                                         独立記念日として国民の祝日にすることが議会により決議された。
                                     </p>
+                                    <p>
+                                        現在、大統領はワルシャワでの独立記念日の公式祝賀会に参加しています。 当日の朝に、厳粛なミサとポーランド
+                                        独立の父であるウィンセンティウィトス、イグナツィパデレフスキー、イグナツィダシンスキー、
+                                        ヴォイチェフコルファンティ、ロマンドモフスキ、そして元帥ユゼフピウスツキの記念碑に花を手向けます。
+                                        午後には無名戦士の墓で祝賀会が開かれ、街で軍隊の行進パレードが行われます。
+                                        ポーランド独立記念日には、ポーランドの旗が多くの家やアパートの前に飾られます。
+                                    </p>
                                     <div class="source">
                                         <i>Source: </i> <a
                                             href="https://en.wikipedia.org/wiki/National_Independence_Day_(Poland)"
