--- a/lessons.html
+++ b/lessons.html
@@ -1093,44 +1093,44 @@
           <form id="quiz" name="quiz">
             <p>You see a group of males and can clearly see they are university students. How would you start describing
               them?</p>
-            <input type="radio" id="mc" name="question1" value="1">Ja jestem...<br>
-            <input type="radio" id="mc" name="question1" value="2"><span lang="pl">Oni są...</span><br>
-            <input type="radio" id="mc" name="question1" value="3">On jest...<br>
+            <input type="radio" id="mc" name="question1" value="1">Ja jestem...
+            <input type="radio" id="mc" name="question1" value="2"><span lang="pl">Oni są...</span>
+            <input type="radio" id="mc" name="question1" value="3">On jest...
 
             <p>If your mum was a teacher, how would you start this sentence? </p>
-            <input type="radio" id="mc" name="question2" value="1">Ona jest...<br>
-            <input type="radio" id="mc" name="question2" value="2">Ono jest...<br>
-            <input type="radio" id="mc" name="question2" value="3"><span lang="pl">Oni są...</span><br>
+            <input type="radio" id="mc" name="question2" value="1">Ona jest...
+            <input type="radio" id="mc" name="question2" value="2">Ono jest...
+            <input type="radio" id="mc" name="question2" value="3"><span lang="pl">Oni są...</span>
 
             <p>You are Korean – how would you start introducing yourself? </p>
-            <input type="radio" id="mc" name="question3" value="1"><span lang="pl">Ty jesteś...</span><br>
-            <input type="radio" id="mc" name="question3" value="2"><span lang="pl">One są...</span><br>
-            <input type="radio" id="mc" name="question3" value="3">Ja jestem...<br>
+            <input type="radio" id="mc" name="question3" value="1"><span lang="pl">Ty jesteś...</span>
+            <input type="radio" id="mc" name="question3" value="2"><span lang="pl">One są...</span>
+            <input type="radio" id="mc" name="question3" value="3">Ja jestem...
 
             <p>Your female friends you came to a party with are all university students – how would you introduce them
               to other people?</p>
-            <input type="radio" id="mc" name="question4" value="1"><span lang="pl">Wy jesteście...</span><br>
-            <input type="radio" id="mc" name="question4" value="2"><span lang="pl">Ty jesteś...</span><br>
-            <input type="radio" id="mc" name="question4" value="3"><span lang="pl">One są...</span><br>
+            <input type="radio" id="mc" name="question4" value="1"><span lang="pl">Wy jesteście...</span>
+            <input type="radio" id="mc" name="question4" value="2"><span lang="pl">Ty jesteś...</span>
+            <input type="radio" id="mc" name="question4" value="3"><span lang="pl">One są...</span>
 
             <p>Your Polish friends are with you. What would you say to them? </p>
-            <input type="radio" id="mc" name="question5" value="1"><span lang="pl">Wy jesteście...</span><br>
-            <input type="radio" id="mc" name="question5" value="2"><span lang="pl">One są...</span><br>
-            <input type="radio" id="mc" name="question5" value="3"><span lang="pl">Ty jesteś...</span><br> <br>
+            <input type="radio" id="mc" name="question5" value="1"><span lang="pl">Wy jesteście...</span>
+            <input type="radio" id="mc" name="question5" value="2"><span lang="pl">One są...</span>
+            <input type="radio" id="mc" name="question5" value="3"><span lang="pl">Ty jesteś...</span>
 
 
             <p> You can also try to translate following sentences:<br></p>
 
               <p>You are a university student.</p>
-              <input class="textbox" type="text" name="question6"> studentem. <br><br>
+              <input class="textbox" type="text" name="question6"> studentem.
               <p>He is a teacher. </p>
-              <input class="textbox" type="text" name="question7"> nauczycielem. <br><br>
+              <input class="textbox" type="text" name="question7"> nauczycielem.
               <p>They are my friends.</p>
-              <input class="textbox" type="text" name="question8"> moimi przyjaciółmi. <br><br>
+              <input class="textbox" type="text" name="question8"> moimi przyjaciółmi.
               <p>They are my female friends.</p>
-              <input class="textbox" type="text" name="question9"> moimi przyjaciółmi. <br><br>
+              <input class="textbox" type="text" name="question9"> moimi przyjaciółkami.
               <p>I am your neighbour.</p>
-              <input class="textbox" type="text" name="question10"> twoim sąsiadem. <br><br>
+              <input class="textbox" type="text" name="question10"> twoim sąsiadem.
               <input id="submitButton" type="button" value="Check my answers" onclick="check()">
             </form>
             <div id="afterSubmit"></div>
