update + namechecker API

--- a/stuff/tools.html
+++ b/stuff/tools.html
@@ -62,29 +62,24 @@
                 <h1>Tools</h1>
                 <article>
                     <h2>Apps</h2>
-                    <div class="container__tools container__tools--item">
-                        <div class="container__tools">
-                            <!-- <div class="dictionary pronunciation">
-                        <label for="text" class="check">Check Polish pronunciation</label> <br>
-                        <input type="text" name="Text" placeholder="Enter your text here..." id="text"><br>
-                        <a href="#" class="say">Check</a>
-                        <audio class="audio" src="" hidden></audio>
-                    </div>
-            </div>
-            <br>
-            I'm gonna fix it soon :)-->
-                            <div class="tools-name__checker">
-                                <label for="name" class="check">Check Polish name!</label>
-                                <input type="text" id="name" placeholder='Enter name e.g. "Paulina"'>
-                                <div class="result" id="result">Your result will appear here</div>
-                                <a href="#" onclick="getName()" class="button__default">Check</a>
+                    <div class="container quiz">
+                        <div class="quiz__box quiz__box--item">
+                            <div class="quiz__box">
+                                <h2>Polish name-chcker</h2>
+                                <img src="https://michalskirobert.github.io/img/portfolio__api-02.jpg"
+                                    alt="Polish declension" class="image-left__center--medium">
+                                <b>Describe:</b>
+                                <p>You can check about Polish names here :) I hope you will enjoy this APP
+                                    if you didn't see some name you wanted to check, please report it and it's gonna be
+                                    updated as soon as possible
+                                </p>
+                                <a href="./api/polishNames/" class="button__default">Check out</a>
                             </div>
                         </div>
                     </div>
-                </article>
-                <div class="reportButton">
-                    <button class="report" onclick="report()">レポート</button>
-                </div>
+                    <div class="reportButton">
+                        <button class="report" onclick="report()">Report</button>
+                    </div>
             </div>
         </section>
         <script src="./../assets/js/tools.js"></script>
