--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1847,7 +1847,7 @@
                       </ruby> <ruby>palcem by mi<rp>(</rp>
                         <rt>パルツェム　ビ　ミ</rt>
                         <rp>)</rp>
-                      </ruby> <ruby>pomóc w<rp>(</rp>ポムツ　フ<rt></rt>
+                      </ruby> <ruby>pomóc w<rp>(</rp><rt>ポムツ　フ</rt>
                         <rp>)</rp>
                       </ruby>
                       przeprowadzce.<rp>(</rp>
