--- a/test/unit0/index.html
+++ b/test/unit0/index.html
@@ -3,11 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SARO - QUIZ UNIT 0</title>
-    <link
-        href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./../../../../assets/style/css/style.css">
+    <title>UNIT 0 test - SARO</title>
+    <link rel="stylesheet" href="./../../assets/style/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -19,7 +16,7 @@
                 window.history.back();
             }
         </script>
-        <h1>Declension</h1>
+        <h1>UNIT 0</h1>
         <div class="container__quiz">
             <div class="box__quiz box__quiz--item">
                 <div id="box__quiz">
@@ -46,7 +43,7 @@
             </div>
         </div>
     </section>
-    <script src="quiz.js"></script>
+    <script src="./../../assets/js/testUnit0.js"></script>
 </body>
 
 </html>
