--- a/ch/stuff/traditions.html
+++ b/ch/stuff/traditions.html
@@ -70,9 +70,9 @@
                                 class="author">@Anna</a></p><br>
                         <div class="container__trad container__trad--item">
                             <div class="container__trad">
-                                <img src="./../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci3.jpg"
+                                <img src="./../../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci3.jpg"
                                     alt="Celebrations of Independence Day" class="image-right__center">
-                                <img src="./../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci2.jpg"
+                                <img src="./../../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci2.jpg"
                                     alt="Celebrations of Independence Day" class="image-left__center">
                                 <p>波兰的国家独立日在每年的11月11日，相当于国庆节。这个日子是纪念第一次世界大战后国家夺回主权。
                                     18世纪后期，波兰遭到了德国、奥匈帝国和俄罗斯帝国的分割。从那以后的波兰在欧洲地图上消失了
@@ -80,7 +80,7 @@
                                     <span class="dots">(...)</span>
                                 </p>
                                 <div class="more">
-                                    <img src="./../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci1.jpg"
+                                    <img src="./../../assets/img/articles/traditions/11.11.2020/swietoniepodleglosci1.jpg"
                                         alt="Celebrations of Independence Day" class="image-right__center">
                                     <p>11月11日是最高将领Józef Piłsudski夺回波兰控制权的日子。从1920年起，这一天会有军事庆典。
                                         之后，于1937年被定为国家假期。但在第二次世界大战前只庆祝过2次。战后，国家独立日被人民
@@ -92,8 +92,8 @@
                                         <br><br>
                                         如今，国家总统参加在华沙举行的国家独立日正式的庆典活动。于早上开始于一场庄严的弥撒仪式和
                                         和在波兰独立之父的纪念碑前鲜花的仪式。波兰独立之父是：Wincenty Witos, Ignacy Paderewski,
-                                         Ignacy Daszyński, Wojciech Korfanty和Roman Dmowskiand还有最高将领Józef Piłsudski。
-                                         下午，庆典在无名战士的墓区进行，还有贯穿整个城市的部队方阵游行。
+                                        Ignacy Daszyński, Wojciech Korfanty和Roman Dmowskiand还有最高将领Józef Piłsudski。
+                                        下午，庆典在无名战士的墓区进行，还有贯穿整个城市的部队方阵游行。
                                         <br>
                                         在波兰独立日，波兰国旗被插在很多房子和公寓楼前。
                                     </p>
